# bgp-simulator-roughdraft

./: CMakeLists.txt  README.md  compare_output.sh
src/: AS.cpp  AS.h  Announcement.cpp  Announcement.h  BGP.cpp  BGP.h  Graph.cpp  Graph.h  Parser.cpp  Parser.h  Policy.h  Propagation.cpp  Propagation.h  ROV.cpp  ROV.h  Route.h  main.cpp
